@@ -1,2 +1,2 @@
 @echo off
-java -Xms9G -Xmx10G -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -jar server.jar
+java -Xms9G -Xmx10G -jar server.jar
